frontend/test/should_fail/index_mm_min_edge.grg
#using "index_min_max_size_model.gm"

rule r {
	n:N -e:E->;
	if { minEdgeFromIndex(e) in edgesFromIndex(bari); }
	
	modify {
	}
}
